--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,8 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+
+    <color name="primaryColor">#2A2E37</color>
+    <color name="secondaryColor">#FFFF8D</color>
+    <color name="primaryText">#B2B2B2</color>
 </resources>
