--- a/app/src/main/res/layout/activity_second.xml
+++ b/app/src/main/res/layout/activity_second.xml
@@ -5,6 +5,7 @@
     android:id="@+id/mainWindow"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/primaryColor"
     android:gravity="center"
     android:orientation="vertical">
 
@@ -25,6 +26,8 @@
                 android:id="@+id/btnAddHarvest"
                 android:layout_width="175dp"
                 android:layout_height="100dp"
+                android:background="@drawable/radius_button"
+                android:layout_margin="2dp"
                 android:text="@string/act_menu_addHarvest"
                 tools:layout_editor_absoluteX="96dp"
                 tools:layout_editor_absoluteY="140dp" />
@@ -33,6 +36,8 @@
                 android:id="@+id/btnAddSell"
                 android:layout_width="175dp"
                 android:layout_height="100dp"
+                android:background="@drawable/radius_button"
+                android:layout_margin="2dp"
                 android:text="@string/act_menu_addSell"
                 tools:layout_editor_absoluteX="96dp"
                 tools:layout_editor_absoluteY="140dp" />
@@ -41,6 +46,8 @@
                 android:id="@+id/btnViewHistory"
                 android:layout_width="175dp"
                 android:layout_height="100dp"
+                android:background="@drawable/radius_button"
+                android:layout_margin="2dp"
                 android:text="@string/act_menu_viewHistory"
                 tools:layout_editor_absoluteX="96dp"
                 tools:layout_editor_absoluteY="140dp" />
@@ -49,6 +56,8 @@
                 android:id="@+id/button4"
                 android:layout_width="175dp"
                 android:layout_height="100dp"
+                android:background="@drawable/radius_button"
+                android:layout_margin="2dp"
                 android:text="Button"
                 tools:layout_editor_absoluteX="96dp"
                 tools:layout_editor_absoluteY="140dp" />
@@ -57,6 +66,8 @@
                 android:id="@+id/button5"
                 android:layout_width="175dp"
                 android:layout_height="100dp"
+                android:background="@drawable/radius_button"
+                android:layout_margin="2dp"
                 android:text="Button"
                 tools:layout_editor_absoluteX="96dp"
                 tools:layout_editor_absoluteY="140dp" />
