--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,7 +4,8 @@
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
 
-    <color name="primaryColor">#2A2E37</color>
-    <color name="secondaryColor">#FFFF8D</color>
+    <color name="primaryColor">#243f6B</color>
+    <color name="secondaryColor">#e5e537</color>
     <color name="primaryText">#B2B2B2</color>
+    <color name="text_color_primary">#e5e537</color>
 </resources>
