reworked tabbedView, repaired 'onDataChanged' and 'onDataRemoved' on Fragment2; simple reworks of xml`s

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,7 +21,8 @@
         android:paddingLeft="8dp"
         android:textColor="@color/primaryColor"
         android:textColorHint="@color/primaryText"
-        android:textColorLink="@color/secondaryColor" />
+        android:textColorLink="@color/primaryColor"
+        android:textCursorDrawable="@null" />
 
     <EditText
         android:id="@+id/etPassword"
@@ -38,7 +39,8 @@
         android:paddingLeft="8dp"
         android:textColor="@color/primaryColor"
         android:textColorHint="@color/primaryText"
-        android:textColorLink="@color/secondaryColor" />
+        android:textColorLink="@color/secondaryColor"
+        android:textCursorDrawable="@null" />
 
     <Button
         android:id="@+id/btnLogin"
