--- a/app/src/main/res/layout/fragment_frag1.xml
+++ b/app/src/main/res/layout/fragment_frag1.xml
@@ -1,12 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/primaryColor"
     android:gravity="center_horizontal"
-    android:orientation="vertical"
-    tools:context=".OrderActivity">
+    android:orientation="vertical">
 
     <LinearLayout
         android:id="@+id/sale"
@@ -146,10 +144,10 @@
             android:layout_weight="1"
             android:background="@drawable/login_edit_text"
             android:ems="10"
-            android:hint="0"
             android:inputType="number"
             android:paddingLeft="8dp"
-            android:text="1"
+            android:textColor="@color/primaryColor"
+            android:textCursorDrawable="@null"
             android:textSize="14sp" />
 
         <TextView
@@ -173,7 +171,8 @@
             android:hint="0"
             android:inputType="number"
             android:paddingLeft="8dp"
-            android:textColor="@color/secondaryColor"
+            android:textColor="@color/primaryColor"
+            android:textCursorDrawable="@null"
             android:textSize="14sp" />
 
         <TextView
@@ -203,26 +202,60 @@
 
         <LinearLayout
             android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:orientation="horizontal">
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/twSummary"
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/twSummary"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="@string/act_orderd_summary_label"
+                    android:textColor="@color/secondaryColor"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:id="@+id/twDefaultPrice"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="@string/act_order_default_price"
+                    android:textColor="@color/secondaryColor"
+                    android:textStyle="bold" />
+            </LinearLayout>
+
+            <EditText
+                android:id="@+id/etCustName"
+                android:layout_width="wrap_content"
+                android:layout_height="40dp"
+                android:layout_marginTop="8dp"
+                android:layout_weight="1"
+                android:background="@drawable/login_edit_text"
+                android:ems="10"
+                android:hint="@string/act_order_customer_name"
+                android:inputType="textPersonName"
+                android:paddingLeft="8dp"
+                android:textCursorDrawable="@null"
+                android:textSize="14sp" />
+
+            <Button
+                android:id="@+id/btnAddToCart"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginBottom="8dp"
+                android:layout_marginTop="8dp"
                 android:layout_weight="1"
-                android:text="@string/act_order_customer_name"
-                android:textColor="@color/secondaryColor"
-                android:textStyle="bold" />
-
-            <TextView
-                android:id="@+id/twDefaultPrice"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="@string/act_order_add_button"
-                android:textColor="@color/secondaryColor"
-                android:textStyle="bold" />
+                android:background="@drawable/radius_button"
+                android:paddingLeft="8dp"
+                android:paddingRight="8dp"
+                android:text="@string/act_order_add_button" />
         </LinearLayout>
     </LinearLayout>
 
