--- a/app/src/main/res/layout/fragment_frag2.xml
+++ b/app/src/main/res/layout/fragment_frag2.xml
@@ -1,31 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/primaryColor"
     android:orientation="vertical"
     android:padding="16dp">
 
-    <android.support.v7.widget.RecyclerView
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="match_parent">
 
-    <android.support.v7.widget.CardView
-        android:layout_width="match_parent"
-        android:layout_height="100dp"
-        android:layout_alignParentBottom="true"
-        app:cardBackgroundColor="@color/secondaryColor">
-
-        <RelativeLayout
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:orientation="vertical" >
+
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/orderRecyclerTest"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:scrollbars="vertical">
+
+            </android.support.v7.widget.RecyclerView>
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_margin="3dp"
-                android:background="@color/primaryColor"
+                android:gravity="bottom"
                 android:orientation="vertical">
 
                 <LinearLayout
@@ -33,10 +34,11 @@
                     android:layout_height="wrap_content"
                     android:layout_margin="3dp"
                     android:background="@color/primaryColor"
+                    android:gravity="bottom|center"
                     android:orientation="horizontal">
 
                     <TextView
-                        android:id="@+id/textView2"
+                        android:id="@+id/twSum"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="Suma: "
@@ -44,32 +46,34 @@
                         android:textSize="20sp" />
 
                     <TextView
-                        android:id="@+id/textView7"
+                        android:id="@+id/twPrice"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="1000 zł"
                         android:textColor="@color/secondaryColor"
                         android:textSize="20sp" />
+
                 </LinearLayout>
 
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:gravity="center"
+                    android:layout_height="wrap_content"
+                    android:background="@color/primaryColor"
+                    android:gravity="bottom|center"
                     android:orientation="vertical">
 
                     <Button
-                        android:id="@+id/button3"
+                        android:id="@+id/btnButton"
                         android:layout_width="200dp"
                         android:layout_height="wrap_content"
+                        android:layout_marginTop="5dp"
                         android:background="@drawable/radius_button"
                         android:text="Button" />
                 </LinearLayout>
 
             </LinearLayout>
+        </LinearLayout>
+    </ScrollView>
 
-        </RelativeLayout>
-    </android.support.v7.widget.CardView>
 
-
-</RelativeLayout>
+</LinearLayout>
