--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,11 +6,29 @@
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/secondaryColor</item>
+        <item name="popupMenuStyle">@style/popupMenuStyle</item>
+        <item name="android:textAppearanceSmallPopupMenu">@style/myPopupMenuTextColorSmall</item>
+        <item name="android:textAppearanceLargePopupMenu">@style/myPopupMenuTextColorLarge</item>
     </style>
 
     <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
 
-    <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
+    <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light">
+
+    </style>
+
+
+    <style name="popupMenuStyle" parent="Widget.AppCompat.PopupMenu">
+        <item name="android:popupBackground">@color/primaryColor</item>
+    </style>
+
+    <style name="myPopupMenuTextColorSmall" parent="TextAppearance.AppCompat.Widget.PopupMenu.Small">
+        <item name="android:textColor">@color/secondaryColor</item>
+    </style>
+
+    <style name="myPopupMenuTextColorLarge" parent="TextAppearance.AppCompat.Widget.PopupMenu.Large">
+        <item name="android:textColor">@color/secondaryColor</item>
+    </style>
 
     <style name="MainTheme" parent="AppTheme">
         <item name="android:textColorPrimary">@color/secondaryColor</item>
