--- a/app/src/main/res/layout/order_item_view.xml
+++ b/app/src/main/res/layout/order_item_view.xml
@@ -131,7 +131,7 @@
             android:orientation="horizontal">
 
             <ImageView
-                android:id="@+id/imageView4"
+                android:id="@+id/imageEdit"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginRight="1dp"
