implement MVP architecture

--- a/app/src/main/res/layout/fragment_frag2.xml
+++ b/app/src/main/res/layout/fragment_frag2.xml
@@ -16,7 +16,7 @@
             android:orientation="vertical" >
 
             <android.support.v7.widget.RecyclerView
-                android:id="@+id/orderRecyclerTest"
+                android:id="@+id/orderRecycler"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:scrollbars="vertical">
@@ -50,6 +50,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:textColor="@color/secondaryColor"
+                        android:text="0"
                         android:layout_marginLeft="5dp"
                         android:textSize="20sp" />
 
