--- a/app/src/main/res/layout/fragment_frag2.xml
+++ b/app/src/main/res/layout/fragment_frag2.xml
@@ -49,9 +49,9 @@
                         android:id="@+id/twPrice"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:textColor="@color/secondaryColor"
-                        android:text="0"
                         android:layout_marginLeft="5dp"
+                        android:text="0"
+                        android:textColor="@color/secondaryColor"
                         android:textSize="20sp" />
 
                 </LinearLayout>
@@ -63,8 +63,24 @@
                     android:gravity="bottom|center"
                     android:orientation="vertical">
 
+                    <EditText
+                        android:id="@+id/etEmail"
+                        android:layout_width="250dp"
+                        android:layout_height="40dp"
+                        android:layout_marginStart="8dp"
+                        android:layout_marginEnd="8dp"
+                        android:background="@drawable/login_edit_text"
+                        android:ems="10"
+                        android:hint="Email Adress"
+                        android:inputType="textEmailAddress"
+                        android:paddingLeft="8dp"
+                        android:textColor="@color/primaryColor"
+                        android:textColorHint="@color/primaryText"
+                        android:textColorLink="@color/primaryColor"
+                        android:textCursorDrawable="@null" />
+
                     <Button
-                        android:id="@+id/btnButton"
+                        android:id="@+id/btnOrder"
                         android:layout_width="200dp"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="5dp"
